# gen-ai-cohort

./: .gitignore
phase-1/: 1-tokenization-explained.md  2-vector-embeddings.md
phase-2-ai-hello-world/: pyproject.toml
phase-2-ai-hello-world/informations/: prompting-techniques.md
phase-2-hello-world/: README.md  main.py  pyproject.toml
phase-2-hello-world/archives/phase-1/: level-1-zero-shot-prompting.py  level-3-few-shot-prompting.py  old-syntax.py  prompting-techniques.md
phase-2-hello-world/informations/phase-1-zero-one-few-shot-prompting/: level-2-one-shot-prompting.py
phase-3-basic-agentic-ai/: agent.py  main.py  prompts.py  pyproject.toml  todo.html  tools.py  weather.txt
phase-4-rag/: base-chat.py  chat.py  docker-compose.yml  main.py  pyproject.toml  search_results.json
prj-1-chat-with-pdf/: .env.example  .gitignore  README.md  docker-compose.yml
prj-1-chat-with-pdf/backend/: Dockerfile  pyproject.toml
prj-1-chat-with-pdf/backend/app/: config.py  db.py  main.py  schemas.py
prj-1-chat-with-pdf/backend/app/routers/: chat.py  pdfs.py
prj-1-chat-with-pdf/backend/app/services/: chat.py  indexing.py
prj-1-chat-with-pdf/frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
prj-1-chat-with-pdf/frontend/src/: App.tsx  index.css
prj-1-chat-with-pdf/frontend/src/components/: ChatPanel.tsx  PdfList.tsx  PdfUploader.tsx
python-practise/: notes.md  p1.py  p10.py  p11.py  p12.py  p13.py  p2.py  p3.py  p4.py  p5.py  p6.py  p7.py  p8.py  p9.py
(+13 files in other folders)
