[project]
name = "phase-2-hello-world"
version = "0.1.0"
description = "Learning AI Basics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.33.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "types-requests>=2.33.0.20260503",
]
